add_subdirectory(./_blog/cate1)
add_subdirectory(./_blog/cate2)
add_subdirectory(./_blog/cate4)
add_subdirectory(./_blog/cate5)
file(GLOB file "*.cpp")
add_executable(generator ${file})
target_link_libraries(generator blog_cate1)
target_link_libraries(generator blog_cate4)
target_link_libraries(generator blog_cate5)
target_link_libraries(generator blog_cate2)
